# jxl-oxide

./: .gitmodules  CHANGELOG.md  Cargo.toml  README.md  build.nix  codecov.yml  default.nix  flake.nix  shell.nix
crates/jxl-bitstream/: Cargo.toml  README.md
crates/jxl-bitstream/src/: bitstream.rs  consts.rs  container.rs  error.rs  header.rs  lib.rs  macros.rs  memory.rs  reader.rs
crates/jxl-bitstream/src/container/: box_header.rs  parse.rs
crates/jxl-coding/: Cargo.toml  README.md
crates/jxl-coding/src/: ans.rs  error.rs  lib.rs  permutation.rs  prefix.rs
crates/jxl-color/: Cargo.toml  README.md
crates/jxl-color/src/: ciexyz.rs  cms.rs  consts.rs  convert.rs  error.rs  fastmath.rs  gamut.rs  gamut_mapping.rs  header.rs  icc.rs  lib.rs  tf.rs  xyb.rs  ycbcr.rs
crates/jxl-color/src/convert/: gamut_map.rs  tone_map.rs
crates/jxl-color/src/fastmath/: powf.rs  rational_poly.rs
crates/jxl-color/src/icc/: decode.rs  parse.rs  synthesize.rs
crates/jxl-color/src/tf/: bt709.rs  pq.rs  rec2408.rs  srgb.rs
crates/jxl-dec/: .gitignore  Cargo.toml
crates/jxl-dec/src/: main.rs
crates/jxl-frame/: Cargo.toml  README.md
crates/jxl-frame/src/: data.rs  error.rs  filter.rs  frame.rs  header.rs  image.rs  lib.rs  patch.rs  spline.rs  toc.rs
crates/jxl-frame/src/data/: hf_global.rs  lf_global.rs  lf_group.rs  mod.rs  noise.rs  pass_group.rs  patch.rs  spline.rs  toc.rs
crates/jxl-frame/src/encoding/: mod.rs  modular.rs
crates/jxl-frame/src/frame_data/: mod.rs  noise.rs  toc.rs
crates/jxl-grid/: Cargo.toml  README.md
crates/jxl-grid/src/: alloc_tracker.rs  lib.rs  mutable_subgrid.rs  shared_subgrid.rs  simd.rs  simple_grid.rs  subgrid.rs
crates/jxl-grid/src/test/: mod.rs  subgrids.rs
crates/jxl-image/: Cargo.toml  README.md
crates/jxl-image/src/: color.rs  error.rs  fb.rs  header.rs  lib.rs
crates/jxl-info/: Cargo.toml  input.jxl
crates/jxl-info/src/: main.rs
crates/jxl-jbr/: Cargo.toml  README.md
crates/jxl-jbr/src/: bit_writer.rs  error.rs  huffman.rs  lib.rs  reconstruct.rs
crates/jxl-jbr/src/reconstruct/: scan.rs
crates/jxl-modular/: Cargo.toml  README.md
crates/jxl-modular/src/: error.rs  image.rs  lib.rs  ma.rs  param.rs  predictor.rs  sample.rs  transform.rs
crates/jxl-modular/src/transform/: palette.rs  rct.rs  squeeze.rs
crates/jxl-oxide/: Cargo.toml  README.md
crates/jxl-oxide-cli/: Cargo.toml  README.md  build.rs
crates/jxl-oxide-cli/src/: commands.rs  decode.rs  dump_jbrd.rs  error.rs  generate_fixture.rs  info.rs  lib.rs  main.rs  output.rs  progressive.rs  slow_motion.rs
crates/jxl-oxide-cli/src/commands/: color_encoding.rs  decode.rs  dump_jbrd.rs  generate_fixture.rs  info.rs  progressive.rs  slow_motion.rs  tests.rs
crates/jxl-oxide-cli/src/output/: ffmpeg_log.c  video.rs
crates/jxl-oxide-cli/src/progressive/: mp4.rs  png_seq.rs
crates/jxl-oxide-common/: Cargo.toml  README.md
crates/jxl-oxide-common/src/: lib.rs
crates/jxl-oxide-fuzz/: .gitignore  Cargo.toml  Readme.md
crates/jxl-oxide-fuzz/fuzz_targets/: decode.rs
crates/jxl-oxide-fuzz/hfuzz_workspace/fuzz_decode/: SIGABRT.PC.7ffff7d1383c.STACK.191f89ecd1.CODE.-6.ADDR.0.INSTR.mov____%eax,%ebx.fuzz  SIGABRT.PC.7ffff7d1383c.STACK.c9ec5b426.CODE.-6.ADDR.0.INSTR.mov____%eax,%ebx.fuzz
crates/jxl-oxide-fuzz/src/: lib.rs
crates/jxl-oxide-tests/: Cargo.toml  README.md
crates/jxl-oxide-tests/benches/: decode.rs
crates/jxl-oxide-tests/src/: lib.rs
crates/jxl-oxide-tests/tests/: test.rs
crates/jxl-oxide-tests/tests/cms/: mod.rs
crates/jxl-oxide-tests/tests/conformance/: mod.rs
crates/jxl-oxide-tests/tests/crop/: mod.rs
crates/jxl-oxide-tests/tests/decode/: mod.rs
crates/jxl-oxide-tests/tests/fuzz_findings/: .gitattributes  ec_upsampling.fuzz  hf_coeff_non_zeros.fuzz  hf_preset_out_of_range.fuzz  hf_varblock_across_group.fuzz  hfmul_non_positive.fuzz  icc_curve_overflow.fuzz  icc_large_stride.fuzz  icc_output_size_alloc_failed.fuzz  icc_parse_oob.fuzz  icc_tag_size.fuzz  invalid_alpha_ref.fuzz  invalid_lz77.fuzz  lz77_distance_overflow.fuzz  lz77_num_to_copy_overflow.fuzz  ma_lookup_overflow.fuzz  ma_tree_multiple_frames_0.fuzz  ma_tree_multiple_frames_3.fuzz  ma_tree_multiple_frames_4.fuzz  mod.rs  modular_jpeg_upsampling.fuzz  modular_jpeg_upsampling_2.fuzz  modular_wrong_palette.fuzz  modular_zero_width.fuzz  noise_on_invisible_frame.fuzz  num_groups_overflow.fuzz  patchref_idx.fuzz  prop_abs_overflow.fuzz  sharp_lut_oob.fuzz  spline_starting_point_overflow.fuzz  squeeze_groups_off_by_one.fuzz  timeout_dim_shift.fuzz  upsampling_sum_not_finite.fuzz
crates/jxl-oxide-tests/tests/image/: grayscale.icc  mod.rs
crates/jxl-oxide-tests/tests/jbrd/: mod.rs
crates/jxl-oxide-wasm/: .gitignore  Cargo.toml  README.md  update-package-json.mjs
crates/jxl-oxide-wasm/src/: helper.js  lib.rs  thread_pool.rs  worker.js
crates/jxl-oxide-wasm/www/: .gitignore  README.md  index.mjs  jxl-decode-worker.mjs  package.json  service-worker.js  service-worker.mjs  styles.css  webpack.config.mjs
crates/jxl-oxide-wasm/www/src/: index.html  index.mjs  jxl-decode-worker.mjs  service-worker.mjs  styles.css
crates/jxl-oxide/benches/: decode.rs
crates/jxl-oxide/examples/: image-integration.rs
crates/jxl-oxide/fuzz/: Cargo.toml
crates/jxl-oxide/fuzz/fuzz_targets/: decode.rs
crates/jxl-oxide/src/: aux_box.rs  fb.rs  integration.rs  lcms2.rs  lib.rs  moxcms.rs
crates/jxl-oxide/tests/: conformance.rs  crop.rs  decode.rs  fuzz_findings.rs  test_fuzz_findings.rs
crates/jxl-render/: Cargo.toml  README.md
crates/jxl-render/src/: blend.rs  buffer.rs  color.rs  cut_grid.rs  dct.rs  error.rs  fb.rs  image.rs  inner.rs  lib.rs  modular.rs  region.rs  render.rs  state.rs  util.rs
crates/jxl-render/tests/: conformance.rs
crates/jxl-threadpool/: Cargo.toml  README.md
crates/jxl-threadpool/src/: lib.rs
crates/jxl-vardct/: Cargo.toml  README.md
crates/jxl-vardct/src/: dct_select.rs  dequant.rs  error.rs  hf_coeff.rs  hf_metadata.rs  hf_pass.rs  lf.rs  lib.rs
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: decode.rs
fuzz/src/: main.rs  reproduce.rs
(+127 files in other folders)
