[workspace]
members = [
  "crates/jxl-bitstream",
  "crates/jxl-coding",
  "crates/jxl-color",
  "crates/jxl-dec",
  "crates/jxl-grid",
  "crates/jxl-frame",
  "crates/jxl-image",
  "crates/jxl-modular",
  "crates/jxl-render",
  "crates/jxl-vardct",
]
resolver = "2"

[profile.release]
debug = 1
# lto = true
