[workspace]
members = [
  "crates/jxl-bitstream",
  "crates/jxl-coding",
  "crates/jxl-color",
  "crates/jxl-dec",
  "crates/jxl-grid",
  "crates/jxl-frame",
  "crates/jxl-image",
  "crates/jxl-modular",
  "crates/jxl-render",
  "crates/jxl-vardct",
]
resolver = "2"

[package]
name = "jxl-oxide"
description = ""
authors = ["Wonwoo Choi <chwo9843@gmail.com>"]
repository = "https://github.com/tirr-c/jxl-oxide.git"
readme = "README.md"
keywords = ["jpeg-xl", "decoder", "jxl-oxide"]
categories = ["multimedia::images"]
license = "MIT OR Apache-2.0"

version = "0.1.0"
edition = "2021"

[dependencies]

[dependencies.jxl-bitstream]
version = "0.2.0"
path = "crates/jxl-bitstream"

[dependencies.jxl-color]
version = "0.2.0"
path = "crates/jxl-color"

[dependencies.jxl-frame]
version = "0.1.0"
path = "crates/jxl-frame"

[dependencies.jxl-grid]
version = "0.1.1"
path = "crates/jxl-grid"

[dependencies.jxl-image]
version = "0.2.0"
path = "crates/jxl-image"

[dependencies.jxl-render]
path = "crates/jxl-render"

[dependencies.tracing]
version = "0.1.37"
default_features = false
features = ["std"]

[profile.release]
debug = 1
# lto = true
