[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies.brotli-decompressor]
version = "5.0.0"

[workspace.dependencies.bytemuck]
version = "1.19.0"

[workspace.dependencies.tracing]
version = "0.1.40"
default-features = false
features = ["std"]

[profile.opt]
inherits = "release"
debug = 1