[workspace]
resolver = "2"
members = ["."]

[package]
name = "jxl-oxide-libfuzzer"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4.7"

[dependencies.jxl-oxide-fuzz]
path = "../crates/jxl-oxide-fuzz"

[profile.release]
debug = 1

[[bin]]
name = "libfuzzer-decode"
path = "fuzz_targets/decode.rs"
test = false
doc = false
