[package]
name = "jxl-bitstream"
description = "JPEG XL bitstream reader, part of jxl-oxide"
authors = ["Wonwoo Choi <chwo9843@gmail.com>"]
repository = "https://github.com/tirr-c/jxl-oxide.git"
readme = "README.md"
keywords = ["jpeg-xl", "decoder", "jxl-oxide"]
categories = ["multimedia::images"]
license = "MIT OR Apache-2.0"

version = "0.3.3"
edition = "2021"

[dependencies]
tracing.workspace = true
