[package]
name = "jxl-coding"
description = "JPEG XL entropy decoder, part of jxl-oxide."
authors = ["Wonwoo Choi <chwo9843@gmail.com>"]
repository = "https://github.com/tirr-c/jxl-oxide.git"
readme = "README.md"
keywords = ["jpeg-xl", "decoder", "jxl-oxide"]
categories = ["multimedia::images"]
license = "MIT OR Apache-2.0"

version = "0.2.0"
edition = "2021"

[dependencies]

[dependencies.jxl-bitstream]
version = "0.2.0"
path = "../jxl-bitstream"
