[package]
name = "jxl-color"
version = "0.1.0"
authors = ["Wonwoo Choi <chwo9843@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]

[dependencies.jxl-bitstream]
path = "../jxl-bitstream"

[dependencies.jxl-coding]
path = "../jxl-coding"

[dependencies.jxl-image]
path = "../jxl-image"

[dependencies.jxl-grid]
path = "../jxl-grid"

[dependencies.jxl-modular]
path = "../jxl-modular"

[dependencies.lcms2]
version = "5.5.0"
optional = true

[features]
icc = ["lcms2"]
default = []
