[package]
name = "jxl-color"
description = "JPEG XL color management functions, part of jxl-oxide."
authors = ["Wonwoo Choi <chwo9843@gmail.com>"]
repository = "https://github.com/tirr-c/jxl-oxide.git"
readme = "README.md"
keywords = ["jpeg-xl", "decoder", "jxl-oxide"]
categories = ["multimedia::images"]
license = "MIT OR Apache-2.0"

version = "0.1.2"
edition = "2021"

[dependencies]

[dependencies.jxl-bitstream]
version = "0.2.0"
path = "../jxl-bitstream"

[dependencies.jxl-coding]
version = "0.1.0"
path = "../jxl-coding"

[dependencies.jxl-grid]
version = "0.1.0"
path = "../jxl-grid"
