[package]
name = "jxl-dec"
description = "JPEG XL decoder"
version = "0.1.0"
authors = ["Wonwoo Choi <chwo9843@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
png = "0.17.7"
rayon = "1.6.1"

[dependencies.clap]
version = "4.0.32"
features = ["derive"]

[dependencies.jxl-bitstream]
path = "../jxl-bitstream"

[dependencies.jxl-coding]
path = "../jxl-coding"

[dependencies.jxl-frame]
path = "../jxl-frame"
default_features = false

[dependencies.jxl-render]
path = "../jxl-render"
default_features = false

[features]
mt = ["jxl-frame/mt", "jxl-render/mt"]
default = ["mt"]
