[package]
name = "jxl-dec"
description = "JPEG XL decoder"
version = "0.1.0"
authors = ["Wonwoo Choi <chwo9843@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
miniz_oxide = "0.7.1"
png = "0.17.8"

[dependencies.clap]
version = "4.0.32"
features = ["derive"]

[dependencies.jxl-bitstream]
path = "../jxl-bitstream"

[dependencies.jxl-coding]
path = "../jxl-coding"

[dependencies.jxl-color]
path = "../jxl-color"
features = ["icc"]

[dependencies.jxl-frame]
path = "../jxl-frame"

[dependencies.jxl-image]
path = "../jxl-image"

[dependencies.jxl-render]
path = "../jxl-render"

[dependencies.tracing]
version = "0.1.37"
default_features = false
features = ["std"]

[dependencies.tracing-subscriber]
version = "0.3.16"
features = ["env-filter"]
