[package]
name = "jxl-frame"
description = "JPEG XL frame data representation, part of jxl-oxide"
authors = ["Wonwoo Choi <chwo9843@gmail.com>"]
repository = "https://github.com/tirr-c/jxl-oxide.git"
readme = "README.md"
keywords = ["jpeg-xl", "decoder", "jxl-oxide"]
categories = ["multimedia::images"]
license = "MIT OR Apache-2.0"

version = "0.5.0"
edition = "2021"

[dependencies]

[dependencies.jxl-bitstream]
version = "0.2.3"
path = "../jxl-bitstream"

[dependencies.jxl-coding]
version = "0.2.3"
path = "../jxl-coding"

[dependencies.jxl-grid]
version = "0.1.1"
path = "../jxl-grid"

[dependencies.jxl-image]
version = "0.5.0"
path = "../jxl-image"

[dependencies.jxl-modular]
version = "0.3.0"
path = "../jxl-modular"

[dependencies.jxl-vardct]
version = "0.3.0"
path = "../jxl-vardct"

[dependencies.tracing]
version = "0.1.37"
default_features = false
features = ["std"]
