[package]
name = "jxl-grid"
description = "Sample grid implementation for jxl-oxide"
authors = ["Wonwoo Choi <chwo9843@gmail.com>"]
repository = "https://github.com/tirr-c/jxl-oxide.git"
readme = "README.md"
keywords = ["jpeg-xl", "decoder", "jxl-oxide"]
categories = ["multimedia::images"]
license = "MIT OR Apache-2.0"

version = "0.2.0"
edition = "2021"

[dependencies]

[dependencies.tracing]
version = "0.1.37"
default_features = false
features = ["std"]
