[package]
name = "jxl-image"
description = "JPEG XL image header representation, part of jxl-oxide"
authors = ["Wonwoo Choi <chwo9843@gmail.com>"]
repository = "https://github.com/tirr-c/jxl-oxide.git"
readme = "README.md"
keywords = ["jpeg-xl", "decoder", "jxl-oxide"]
categories = ["multimedia::images"]
license = "MIT OR Apache-2.0"

version = "0.6.0"
edition = "2021"

[dependencies]

[dependencies.jxl-bitstream]
version = "0.3.0"
path = "../jxl-bitstream"

[dependencies.jxl-color]
version = "0.4.0"
path = "../jxl-color"

[dependencies.jxl-grid]
version = "0.2.0"
path = "../jxl-grid"

[dependencies.tracing]
version = "0.1.37"
default_features = false
features = ["std"]
