[package]
name = "jxl-image"
description = "JPEG XL image header representation, part of jxl-oxide"
authors = ["Wonwoo Choi <chwo9843@gmail.com>"]
repository = "https://github.com/tirr-c/jxl-oxide.git"
readme = "README.md"
keywords = ["jpeg-xl", "decoder", "jxl-oxide"]
categories = ["multimedia::images"]
license = "MIT OR Apache-2.0"

version = "0.12.0"
edition = "2021"

[dependencies]
tracing.workspace = true

[dependencies.jxl-bitstream]
version = "0.6.0"
path = "../jxl-bitstream"

[dependencies.jxl-color]
version = "0.10.0"
path = "../jxl-color"

[dependencies.jxl-grid]
version = "0.5.3"
path = "../jxl-grid"

[dependencies.jxl-oxide-common]
version = "0.2.0"
path = "../jxl-oxide-common"
