[package]
name = "jxl-jbr"
description = "JPEG bitstream reconstruction from JPEG XL bitstream"
authors = ["Wonwoo Choi <chwo9843@gmail.com>"]
repository = "https://github.com/tirr-c/jxl-oxide.git"
readme = "README.md"
keywords = ["jpeg-xl", "decoder", "jxl-oxide"]
categories = ["multimedia::images"]
license = "MIT OR Apache-2.0"

version = "0.1.0"
edition = "2021"

[dependencies]
brotli-decompressor.workspace = true
tracing.workspace = true

[dependencies.jxl-bitstream]
version = "0.5.0"
path = "../jxl-bitstream"

[dependencies.jxl-frame]
version = "0.11.0"
path = "../jxl-frame"

[dependencies.jxl-image]
version = "0.11.0"
path = "../jxl-image"

[dependencies.jxl-oxide-common]
version = "0.1.0"
path = "../jxl-oxide-common"

[dependencies.jxl-vardct]
version = "0.9.0"
path = "../jxl-vardct"
