[package]
name = "jxl-modular"
description = "JPEG XL Modular image decoder, part of jxl-oxide"
authors = ["Wonwoo Choi <chwo9843@gmail.com>"]
repository = "https://github.com/tirr-c/jxl-oxide.git"
readme = "README.md"
keywords = ["jpeg-xl", "decoder", "jxl-oxide"]
categories = ["multimedia::images"]
license = "MIT OR Apache-2.0"

version = "0.8.0"
edition = "2021"

[dependencies]
tracing.workspace = true

[dependencies.jxl-bitstream]
version = "0.4.1"
path = "../jxl-bitstream"

[dependencies.jxl-coding]
version = "0.4.1"
path = "../jxl-coding"

[dependencies.jxl-grid]
version = "0.5.0"
path = "../jxl-grid"

[dependencies.jxl-threadpool]
version = "0.1.1"
path = "../jxl-threadpool"
