[package]
name = "jxl-modular"
description = "JPEG XL Modular image decoder, part of jxl-oxide"
authors = ["Wonwoo Choi <chwo9843@gmail.com>"]
repository = "https://github.com/tirr-c/jxl-oxide.git"
readme = "README.md"
keywords = ["jpeg-xl", "decoder", "jxl-oxide"]
categories = ["multimedia::images"]
license = "MIT OR Apache-2.0"

version = "0.11.2"
edition = "2024"

[dependencies]
tracing.workspace = true

[dependencies.jxl-bitstream]
version = "1.0.0"
path = "../jxl-bitstream"

[dependencies.jxl-coding]
version = "1.0.1"
path = "../jxl-coding"

[dependencies.jxl-grid]
version = "0.6.0"
path = "../jxl-grid"

[dependencies.jxl-oxide-common]
version = "1.0.0"
path = "../jxl-oxide-common"

[dependencies.jxl-threadpool]
version = "1.0.0"
path = "../jxl-threadpool"
