[package]
name = "jxl-oxide-cli"
description = "CLI tools of jxl-oxide"
authors = ["Wonwoo Choi <chwo9843@gmail.com>"]
repository = "https://github.com/tirr-c/jxl-oxide.git"
readme = "README.md"
keywords = ["jpeg-xl", "decoder", "jxl-oxide"]
categories = ["multimedia::images"]
license = "MIT OR Apache-2.0"

version = "0.11.2"
edition = "2021"

default-run = "jxl-oxide"

[dependencies]
lcms2 = "6.0.4"
miniz_oxide = "0.8.2"
png = "0.17.16"
tracing.workspace = true

[dependencies.clap]
version = "4.5.1"
features = ["derive"]

[dependencies.jxl-color]
version = "0.10.0"
path = "../jxl-color"
optional = true

[dependencies.jxl-oxide]
version = "0.11.2"
path = "../jxl-oxide"
default-features = false
features = ["lcms2"]

[dependencies.mimalloc]
version = "0.1.39"
optional = true

[dependencies.rayon]
version = "1.8.1"
optional = true

[dependencies.tracing-subscriber]
version = "0.3.18"
features = ["env-filter"]

[dependencies.va_list]
version = "0.2.0"
optional = true

[target.'cfg(windows)'.dependencies.rusty_ffmpeg]
version = "0.16.1"
features = ["link_vcpkg_ffmpeg"]
optional = true

[target.'cfg(not(windows))'.dependencies.rusty_ffmpeg]
version = "0.16.1"
features = ["link_system_ffmpeg"]
optional = true

[features]
default = ["rayon", "mimalloc"]
mimalloc = ["dep:mimalloc"]
rayon = ["dep:rayon", "jxl-oxide/rayon"]
__devtools = []
__ffmpeg = ["dep:rusty_ffmpeg", "dep:va_list", "dep:jxl-color"]

[[bin]]
name = "jxl-oxide"
path = "src/main.rs"
doc = false
