[package]
name = "jxl-oxide-common"
description = "Common helpers for jxl-oxide"
authors = ["Wonwoo Choi <chwo9843@gmail.com>"]
repository = "https://github.com/tirr-c/jxl-oxide.git"
readme = "README.md"

version = "0.1.0"
edition = "2021"

[dependencies]

[dependencies.jxl-bitstream]
version = "0.5.0-alpha.0"
path = "../jxl-bitstream"
