[package]
name = "jxl-oxide-tests"
description = "jxl-oxide integration tests"
repository = "https://github.com/tirr-c/jxl-oxide.git"
readme = "README.md"
license = "MIT OR Apache-2.0"

version = "0.0.0"
edition = "2021"

[dependencies]
ring = "0.17.8"
tracing.workspace = true

[dependencies.criterion]
version = "0.5.1"
optional = true

[dependencies.image]
version = "0.25.4"
default-features = false
optional = true

[dependencies.jxl-oxide]
version = "0.11.0"
path = "../jxl-oxide"
default-features = false
features = ["lcms2", "moxcms"]

[dependencies.mimalloc]
version = "0.1.39"
optional = true

[dependencies.rand]
version = "0.8.5"
default-features = false
features = ["getrandom", "small_rng"]
optional = true

[dependencies.reqwest]
version = "0.12.9"
default-features = false
features = ["blocking", "rustls-tls"]
optional = true

[dependencies.zstd]
version = "0.13.0"
optional = true

[features]
default = ["net", "mimalloc", "rayon", "image", "conformance", "crop", "decode", "bench"]
net = ["dep:reqwest"]
mimalloc = ["dep:mimalloc"]
rayon = ["jxl-oxide/rayon"]
image = ["dep:image", "jxl-oxide/image"]
conformance = []
crop = ["dep:rand"]
decode = ["dep:zstd"]
bench = ["dep:criterion"]

[[bench]]
name = "decode"
harness = false
required-features = ["bench"]
