[package]
name = "jxl-oxide-wasm"
description = "WebAssembly bindings of jxl-oxide"
authors = ["Wonwoo Choi <chwo9843@gmail.com>"]
repository = "https://github.com/tirr-c/jxl-oxide.git"
readme = "README.md"
keywords = ["jpeg-xl", "decoder", "jxl-oxide", "webassembly"]
categories = ["multimedia::images"]
license = "MIT OR Apache-2.0"
publish = false

version = "0.12.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
miniz_oxide = "0.7.2"
png = "0.17.13"
wasm-bindgen = "0.2.93"

[dependencies.console_error_panic_hook]
version = "0.1.7"
optional = true

[dependencies.console_log]
version = "1.0.0"
optional = true

[dependencies.jxl-oxide]
version = "0.12.0"
path = "../jxl-oxide"
default-features = false

[dependencies.web-sys]
version = "0.3.70"
features = ["Window", "WorkerGlobalScope", "Navigator", "WorkerNavigator"]
optional = true

[features]
default = ["web"]
dev = ["dep:console_error_panic_hook", "dep:console_log"]
web = ["dep:web-sys"]
