[package]
name = "jxl-oxide"
description = "JPEG XL decoder written in pure Rust"
authors = ["Wonwoo Choi <chwo9843@gmail.com>"]
repository = "https://github.com/tirr-c/jxl-oxide.git"
readme = "README.md"
keywords = ["jpeg-xl", "decoder", "jxl-oxide"]
categories = ["multimedia::images"]
license = "MIT OR Apache-2.0"

version = "0.11.3"
edition = "2021"

[dependencies]
brotli-decompressor.workspace = true
tracing.workspace = true

[dependencies.bytemuck]
workspace = true
optional = true

[dependencies.image]
version = "0.25.5"
default-features = false
optional = true

[dependencies.jxl-bitstream]
version = "0.6.0"
path = "../jxl-bitstream"

[dependencies.jxl-color]
version = "0.10.0"
path = "../jxl-color"

[dependencies.jxl-frame]
version = "0.12.0"
path = "../jxl-frame"

[dependencies.jxl-grid]
version = "0.5.3"
path = "../jxl-grid"

[dependencies.jxl-image]
version = "0.12.0"
path = "../jxl-image"

[dependencies.jxl-jbr]
version = "0.1.1"
path = "../jxl-jbr"

[dependencies.jxl-oxide-common]
version = "0.2.0"
path = "../jxl-oxide-common"

[dependencies.jxl-render]
version = "0.11.2"
path = "../jxl-render"

[dependencies.jxl-threadpool]
version = "0.1.2"
path = "../jxl-threadpool"

[dependencies.lcms2]
version = "6.0.0"
optional = true

[dependencies.moxcms]
version = "0.5.1"
optional = true

[features]
default = ["rayon"]
image = ["dep:bytemuck", "dep:image"]
lcms2 = ["dep:lcms2"]
moxcms = ["dep:moxcms"]
rayon = ["jxl-threadpool/rayon"]
__examples = ["image?/png"]

[package.metadata.docs.rs]
features = ["image"]

[[example]]
name = "image-integration"
required-features = ["image", "__examples"]
