[package]
name = "jxl-oxide"
description = "JPEG XL decoder written in pure Rust"
authors = ["Wonwoo Choi <chwo9843@gmail.com>"]
repository = "https://github.com/tirr-c/jxl-oxide.git"
readme = "README.md"
keywords = ["jpeg-xl", "decoder", "jxl-oxide"]
categories = ["multimedia::images"]
license = "MIT OR Apache-2.0"

version = "0.12.2"
edition = "2024"

[dependencies]
brotli-decompressor.workspace = true
tracing.workspace = true

[dependencies.bytemuck]
workspace = true
optional = true

[dependencies.image]
version = "0.25.5"
default-features = false
optional = true

[dependencies.jxl-bitstream]
version = "1.0.0"
path = "../jxl-bitstream"

[dependencies.jxl-color]
version = "0.11.0"
path = "../jxl-color"

[dependencies.jxl-frame]
version = "0.13.1"
path = "../jxl-frame"

[dependencies.jxl-grid]
version = "0.6.0"
path = "../jxl-grid"

[dependencies.jxl-image]
version = "0.13.0"
path = "../jxl-image"

[dependencies.jxl-jbr]
version = "0.2.0"
path = "../jxl-jbr"

[dependencies.jxl-oxide-common]
version = "1.0.0"
path = "../jxl-oxide-common"

[dependencies.jxl-render]
version = "0.12.1"
path = "../jxl-render"

[dependencies.jxl-threadpool]
version = "1.0.0"
path = "../jxl-threadpool"

[dependencies.lcms2]
version = "6.0.0"
optional = true

[dependencies.moxcms]
version = "0.6.0"
optional = true

[features]
default = ["rayon"]
image = ["dep:bytemuck", "dep:image"]
lcms2 = ["dep:bytemuck", "dep:lcms2"]
moxcms = ["dep:moxcms"]
rayon = ["jxl-threadpool/rayon"]
__examples = ["image?/png"]

[package.metadata.docs.rs]
features = ["image"]

[[example]]
name = "image-integration"
required-features = ["image", "__examples"]
