[package]
name = "jxl-render"
version = "0.1.0"
authors = ["Wonwoo Choi <chwo9843@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]

[dependencies.jxl-bitstream]
path = "../jxl-bitstream"

[dependencies.jxl-coding]
path = "../jxl-coding"

[dependencies.jxl-color]
path = "../jxl-color"

[dependencies.jxl-frame]
path = "../jxl-frame"

[dependencies.jxl-grid]
path = "../jxl-grid"

[dependencies.jxl-image]
path = "../jxl-image"

[dependencies.jxl-modular]
path = "../jxl-modular"

[dependencies.jxl-vardct]
path = "../jxl-vardct"

[dependencies.tracing]
version = "0.1.37"
default_features = false
features = ["std"]

[dev-dependencies]
lcms2 = "5.5.0"

[dev-dependencies.reqwest]
version = "0.11.14"
features = ["blocking"]
