[package]
name = "jxl-threadpool"
description = "Internal crate of jxl-oxide to abstract over thread pool implementation"
authors = ["Wonwoo Choi <chwo9843@gmail.com>"]
repository = "https://github.com/tirr-c/jxl-oxide.git"
readme = "README.md"
keywords = ["jxl-oxide"]
license = "MIT OR Apache-2.0"

version = "0.1.2"
edition = "2024"

[dependencies]
tracing.workspace = true

[dependencies.rayon]
version = "1.8.0"
optional = true

[dependencies.rayon-core]
version = "1.12.0"
optional = true

[features]
default = []
rayon = ["dep:rayon", "dep:rayon-core"]
